# rent-price-prediction

./: .gitignore  241.ipynb  README.md  presentation_plan.txt  pyproject.toml  readme.ipynb  readme.md  requirements.txt
models/: model.pck  one_hot_encoder.pck  scaler.pck
src/: database.py  exceptions.py  main.py  models.py
src/api/: exceptions.py  main.py  utils.py
src/data/: make_dataset.py
src/database/: __init__.py  models.py  repository.py
tests/: test_database.py  test_main.py  test_models.py
tests/data/: test_make_dataset.py
