[tool.poetry]
name = "jjuoda-ds.2.4"
version = "0.1.0"
description = ""
authors = ["Julius Juodagalvis <julius.juodagalvis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jedi = "<0.18"
sqlalchemy = "^1.3.22"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
scikit-learn = "^0.24.1"
scipy = "<1.6"
psycopg2-binary = "^2.8.6"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
jedi = "\"<0.18\""
ipython = "^7.19.0"
pytest = "^6.2.1"
ipykernel = "^5.4.3"
seaborn = "^0.11.1"
plotly = "^4.14.3"
black = {version = "^20.8b1", allow-prereleases = true}
nbformat = ">=4.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
